# pong-in-bevy

./: .gitignore  Cargo.toml  README.md  justfile  lefthook.toml  rustfmt.toml
.github/workflows/: ci.yaml  release.yaml
src/: app.rs  debug_plugin.rs  debug_plugins.rs  dev_tools.rs  game.rs  lib.rs  main.rs  menu.rs  screens.rs  select_players.rs  states.rs
src/screens/: game.rs  menu.rs  select_players.rs
