[package]
name = "pong-in-bevy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
bevy = "0.18"
bevy-inspector-egui = "0.36"
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
rand = { version = "0.10", features = ["chacha"] }
thiserror = "2"
tracing = { version = "0.1", features = [
    "max_level_debug",
    "release_max_level_warn",
] }

[dev-dependencies]
insta = "1.47"
mockall = "0.14"
rstest = "0.26"

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
